JIT changes